--- a/WebContent/css-form-samples/form-style-7.html
+++ b/WebContent/css-form-samples/form-style-7.html
@@ -12,7 +12,7 @@ function adjust_textarea(h) {
 </script>
 <style>
 body {
-  background: #B8D7FF;
+  background: #F5A9A9;
 }
 
 .form-style-7{
@@ -113,12 +113,12 @@ body {
 }
 .form-style-7 input[type="submit"],
 .form-style-7 input[type="button"]{
-	background: #2471FF;
+	background: #b2b2b2;
 	border: none;
 	padding: 10px 20px 10px 20px;
-	border-bottom: 3px solid #5994FF;
+	border-bottom: 3px solid #6d6c6c;
 	border-radius: 3px;
-	color: #D2E2FF;
+	color: black;
 }
 .form-style-7 input[type="submit"]:hover,
 .form-style-7 input[type="button"]:hover{
@@ -131,12 +131,11 @@ body {
 <body>
 
 <form class="form-style-7">
-<h1>Fill Form</h1>
+<h1>회원 등록</h1>
 <ul>
 <li>
-    <label for="name">Name</label>
+    <label for="name">이름</label>
     <input type="text" name="name" maxlength="100">
-    <span>Enter your full name here</span>
 </li>
 <li>
     <label for="email">Email</label>
@@ -144,7 +143,7 @@ body {
     <span>Enter a valid email address</span>
 </li>
 <li>
-    <label for="url">Website</label>
+    <label for="url">성별</label>
     <input type="url" name="url" maxlength="100">
     <span>Your website address (eg: http://www.google.com)</span>
 </li>
