--- a/WebContent/css-form-samples/form-style-5.html
+++ b/WebContent/css-form-samples/form-style-5.html
@@ -114,9 +114,9 @@
 <div class="form-style-5">
 <form>
 <fieldset>
-<legend><span class="number">1</span> Candidate Info</legend>
-<input type="text" name="field1" placeholder="Your Name *">
-<input type="email" name="field2" placeholder="Your Email *">
+<legend><span class="number">1</span> 회원 등록</legend>
+<input type="text" name="field1" placeholder="이름 *">
+<input type="email" name="field2" placeholder="Email *">
 <textarea name="field3" placeholder="About yourself"></textarea>
 <label for="job">Interests:</label>
 <select id="job" name="field4">
@@ -143,7 +143,7 @@
 <legend><span class="number">2</span> Additional Info</legend>
 <textarea name="field3" placeholder="About Your School"></textarea>
 </fieldset>
-<input type="submit" value="Apply" />
+<input type="submit" value="저장" />
 </form>
 </div>
 </body>
